Fri Jul  3 19:48:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: undef-ed shome methods.  [ruby-core:24110]

	* complex.c (Numeric#arg): NaN for NaN.  [ruby-core:24116]

Fri Jul  3 18:35:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_iseq_struct): fixed types.

	* vm_core.h (ic_vmstat): VM state version is VALUE.

Fri Jul  3 02:52:20 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): time guess strategy refined again.

Fri Jul  3 00:36:16 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): time guess strategy refined.

Thu Jul  2 11:16:25 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: added response to Net::IMAP::ResponseError.
	  a patch from Eric Hodel in [ruby-core:24111].

Thu Jul  2 08:04:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (num_exact): rb_check_to_integer() can deal with both of
	  Fixnum and Bignum together.

Thu Jul  2 07:53:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fixed wrong variable.

Thu Jul  2 05:37:38 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (num_exact): use to_r for T_FLOAT.

Thu Jul  2 05:15:54 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (quo): return an integer if possible.

Wed Jul  1 21:09:25 2009  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_time_num_new): declared.

	* time.c (nsec2timev): extracted from time_new_internal.
	  (time_new_internal): change argument to VALUE.
	  (rb_time_new): follow the argument change.
	  (rb_time_nano_new): ditto.
	  (rb_time_num_new): new function.

	* ext/socket/ancdata.c (ancillary_timestamp): use rb_time_num_new to
	  represent struct bintime preciously.

Wed Jul  1 08:46:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_encoding): encodings need extra depth.
	  [ruby-core:24100]

Wed Jul  1 06:47:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_grep): gets rid of type-punning calls.
